bee-common-derive/tests/packable/fail/union.stderr
error: Unions cannot derive `Packable`
  --> $DIR/union.rs:10:11
   |
10 | pub union MaybeInt {
   |           ^^^^^^^^
